# vader_mastodon_bot

./: Cargo.toml  README.md
src/: config.rs  main.rs  vader.rs
